[tool.poetry]
name = "mambopower"
version = "0.0.1"
description = "MamboPower provides various power system and market analysis tools."
authors = ["Manho Joung"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
